@@ -55,6 +55,7 @@ void                IPC_GeneralInfo(char *params, Client * c);
 void                IPC_Modules(char *params, Client * c);
 void                IPC_DockPosition(char *params, Client * c);
 void                IPC_KDE(char *params, Client * c);
+void                IPC_MemDebug(char *params, Client * c);
 
 /* Changes By Asmodean_ <naru@caltech.edu> / #E@Efnet
  * 
@@ -533,6 +534,17 @@ IPCStruct           IPCArray[] =
       "kde",
       "Turns on and off KDE support",
       "use \"kde on\" and \"kde off\" to enable/disable support"
+   },
+   {
+      IPC_MemDebug,
+      "dump_mem_debug",
+      "Dumps memory debugging information out to e.mem.out",
+      "Use this command to have E dump its current memory debugging table\n"
+      "to the e.mem.out file. NOTE: please read comments at the top of\n"
+      "memory.c to see how to enable this. This will let you hunt memory\n"
+      "leaks, over-allocations of memory, and other memory-related problems\n"
+      "very easily with all pointers allocated stamped with a time, call\n"
+      "tree that led to that allocation, file and line, and the chunk size.\n"
    }
 };
 
@@ -4897,4 +4909,13 @@ IPC_Group(char *params, Client * c)
 
    return;
 
+}
+
+void
+IPC_MemDebug(char *params, Client * c)
+{
+   EDisplayMemUse();
+   return;
+   params = NULL;
+   c = NULL;
 }
