@@ -77,7 +77,7 @@ KModuleList;
 
 static KModuleList *KModules = NULL;
 
-void 
+void
 KDE_ClientMessage(Window win, Atom atom, long data, Time timestamp)
 {
 
@@ -100,7 +100,7 @@ KDE_ClientMessage(Window win, Atom atom, long data, Time timestamp)
 
 }
 
-void 
+void
 KDE_ClientTextMessage(Window win, Atom atom, char *data)
 {
 
@@ -122,7 +122,7 @@ KDE_ClientTextMessage(Window win, Atom atom, char *data)
 
 }
 
-void 
+void
 KDE_SendMessagesToModules(Atom atom, long data)
 {
 
@@ -141,7 +141,7 @@ KDE_SendMessagesToModules(Atom atom, long data)
 
 }
 
-void 
+void
 KDE_UpdateFocusedWindow(void)
 {
 
@@ -190,7 +190,7 @@ KDE_UpdateFocusedWindow(void)
 
 }
 
-void 
+void
 KDE_NewWindow(EWin * ewin)
 {
 
@@ -245,7 +245,7 @@ KDE_NewWindow(EWin * ewin)
 
 }
 
-void 
+void
 KDE_RemoveWindow(EWin * ewin)
 {
 
@@ -275,7 +275,7 @@ KDE_RemoveWindow(EWin * ewin)
 
 }
 
-void 
+void
 KDE_AddModule(Window win)
 {
 
@@ -410,7 +410,7 @@ KDE_AddModule(Window win)
 
 }
 
-void 
+void
 KDE_RemoveModule(Window win)
 {
 
@@ -465,7 +465,7 @@ KDE_RemoveModule(Window win)
 
 }
 
-void 
+void
 KDE_Init(void)
 {
    /*
@@ -586,7 +586,7 @@ KDE_Init(void)
 
 }
 
-void 
+void
 KDE_Shutdown(void)
 {
 
@@ -656,7 +656,7 @@ KDE_Shutdown(void)
 
 }
 
-void 
+void
 KDE_ClientInit(Window win)
 {
 
@@ -689,7 +689,7 @@ KDE_ClientInit(Window win)
 
 }
 
-void 
+void
 KDE_ClientChange(Window win, Atom a)
 {
 
@@ -782,7 +782,7 @@ KDE_ClientChange(Window win, Atom a)
 
 }
 
-void 
+void
 KDE_GetDecorationHint(Window win, long *dechints)
 {
 
@@ -852,7 +852,7 @@ KDE_GetDecorationHint(Window win, long *dechints)
 
 }
 
-void 
+void
 KDE_CheckClientHints(Window win)
 {
 
@@ -875,7 +875,7 @@ KDE_CheckClientHints(Window win)
 
 }
 
-int 
+int
 KDE_WindowCommand(EWin * ewin, char *cmd)
 {
 
@@ -931,7 +931,7 @@ KDE_WindowCommand(EWin * ewin, char *cmd)
 
 }
 
-void 
+void
 KDE_Command(char *cmd, XClientMessageEvent * event)
 {
 
@@ -1010,7 +1010,7 @@ KDE_Command(char *cmd, XClientMessageEvent * event)
 
 }
 
-void 
+void
 KDE_ProcessClientMessage(XClientMessageEvent * event)
 {
 
@@ -1074,7 +1074,7 @@ KDE_ProcessClientMessage(XClientMessageEvent * event)
 
 }
 
-void 
+void
 KDE_ModuleAssert(Window win)
 {
 
@@ -1088,7 +1088,7 @@ KDE_ModuleAssert(Window win)
 
 }
 
-void 
+void
 KDE_PrepModuleEvent(Window win, KMessage msg)
 {
 
@@ -1137,7 +1137,7 @@ KDE_PrepModuleEvent(Window win, KMessage msg)
 
 }
 
-void 
+void
 KDE_SetRootArea(void)
 {
 
@@ -1156,7 +1156,7 @@ KDE_SetRootArea(void)
 
 }
 
-void 
+void
 KDE_SetNumDesktops(void)
 {
 
@@ -1192,7 +1192,7 @@ KDE_SetNumDesktops(void)
    EDBUG_RETURN_;
 }
 
-void 
+void
 KDE_HintChange(Atom a)
 {
 
@@ -1216,7 +1216,7 @@ KDE_HintChange(Atom a)
 
 }
 
-void 
+void
 KDE_UpdateClient(EWin * ewin)
 {
 
