@@ -2211,3 +2211,11 @@ Wed Sep 22 15:41:28 PDT 1999
 (Raster)
 
 some more multihead fixes...
+
+-------------------------------------------------------------------------------
+
+Wed Sep 22 16:08:01 PDT 1999
+(Raster)
+
+make the memory debugging stuff better commented - and add ipc call tyo 
+dump mem debug info
